Fixed width issues on IE11
Fixed width issues on IE11

--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,10 @@ body {
 }
 main {
     max-width: 1290px;
+display:block;
     margin: 0 auto;
 }
-/*section {
-    min-height:45vh;
-}*/
+
 button, input, optgroup, select, textarea {
     font-family: inherit;
 }
